--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,43 @@
-version: '2'
+version: '3.8'
+
+# Создаем общую сеть default для всех контейнеров
+networks:
+  default:
+    driver: bridge
+
 services:
-  php:
-    image: yiisoftware/yii2-php:7.4-apache
-    volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+  database:
+    image: mysql:latest
+    environment:
+      - MYSQL_DATABASE=${DATABASE_NAME}
+      - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
     ports:
-      - '8000:80'
+      - "3306:3306"
+    networks:
+      - default
+    volumes:
+      - ./docker/database/mysql/data:/var/lib/mysql
+
+  php-fpm:
+    build:
+      context: ./docker/php-fpm
+    depends_on:
+      - database
+    networks:
+      - default
+    volumes:
+      - .:/var/www
+
+  nginx:
+    build:
+      context: ./docker/nginx
+    volumes:
+      - .:/var/www
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/sites/:/etc/nginx/sites-available
+      - ./docker/nginx/conf.d/:/etc/nginx/conf.d
+      - ./docker/logs:/var/log
+    depends_on:
+      - php-fpm
+    ports:
+      - "80:80"
