feature(docker): rabbit management service added

--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DATABASE_ROOT_PASSWORD=secret
 
 APP_ENV=dev
 APP_SECRET=24e17c47430bd2044a61c131c1cf6990
+
+# Rabbit
+RABBITMQ_ERLANG_COOKIE=SWQGDFFEGLNMEERG
+RABBITMQ_DEFAULT_USER=rabbitmq
+RABBITMQ_DEFAULT_PASS=rabbitmq
+RABBITMQ_DEFAULT_VHOST=/
